# sari

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: eval_benches.rs
src/: ast.rs  error.rs  evaluator.rs  lib.rs  main.rs  parser.rs  scanner.rs  source.rs  token.rs
src/tests/helpers/: ast.rs
tests/: eval_tests.rs
