[package]
name = "sari"
version = "1.0.0"
authors = ["David Majda <david@majda.cz>"]
edition = "2021"
description = "Simple arithmetic expression evaluator"
repository = "https://github.com/dmajda/sari"
license = "MIT OR Apache-2.0"
keywords = ["arithmetic", "expression", "evaluator"]
categories = ["compilers", "mathematics"]

[dependencies]

[dev-dependencies]
divan = "0.1.17"

[[bench]]
name = "eval_benches"
harness = false
